# nanoplot

./: .gitignore  .npmignore  .prettierrc  CONTRIBUTIONS.md  Cargo.toml  LICENSE.md  README.md  build.tsx  bun.lockb  bunfig.toml  curve-linear-wasm.d.ts  cypress.config.ts  esbuild.js  happydom.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.mjs  svg_path.wasm  tailwind-container-queries.ts  tailwind-library.config.ts  tailwind.config.ts  temporal-polyfill.ts  test.js  testing-library.ts  tsconfig.json  tsconfig.typings.json
.husky/: pre-commit
@types/: css-modules.d.ts  global.d.ts
crates/curve-linear/: Cargo.toml  README.md
crates/curve-linear/src/: lib.rs
cypress/e2e/: pie-graph.cy.ts
documentation/: context.md  cross-graph-conventions.md  domain.md  performance.md  wasm-perf.md
public/: sandpack-dark-global.css
public/sandpack/: sandpack-light-global.css  sandpack.js
scripts/: bench-curve-node.js  curve-linear-benchmark.ts  post-build.js  wasm.js
src/app/: globals.css  layout.tsx  page.tsx
src/app/bar-graph/: page.tsx
src/app/dashboard/: layout.tsx
src/app/examples/: layout.tsx
src/assets/: icons.tsx
src/export/: index.tsx
src/hooks/: use-bounding-box.ts  use-graph.ts  use-height.ts  use-is-server-component.ts  use-mounted.ts  use-mouse-coordinates.ts  use-mouse-coordinates.tsx  use-on-click-outside.ts  use-pan.ts  use-stateful-ref.ts  use-tether.ts  use-theme.ts
src/stores/: examples.ts
src/styles/: library-global.css  variables.scss
src/utils/: MathUtils.ts  array.spec.ts  array.ts  countries.ts
(+391 files in other folders)
