[workspace]
members = [
    "crates/plot",
]
resolver = "2"

[profile.release]
# Optimize for size over speed
opt-level = "z"
# Link-time optimization to shrink code
lto = "fat"
# Better inlining decisions for small binaries
codegen-units = 1
# Remove panic machinery to save space
panic = "abort"
# Attempt to strip symbols if supported
strip = true
